# FivcAdvisor

./: .cursorignore  .env.example  .gitignore  ADAPTERS_REMOVAL_ANALYSIS.md  ADAPTERS_REMOVAL_CHECKLIST.md  ADAPTERS_REMOVAL_COMPLETION.md  ADAPTERS_REMOVAL_PLAN.md  ADAPTERS_REMOVAL_SUMMARY.md  AGENTS_SWARM_RUNNABLE_MIGRATION.md  ALIGNMENT_FIXES_SUMMARY.md  ASYNCIO_ISSUE_FINAL_RESOLUTION.md  ASYNCIO_ISSUE_RESOLUTION.md  BUNDLES_REMOVAL_SUMMARY.md  CLEANUP_UNUSED_ADAPTER_FILES.md  CODEBASE_ALIGNMENT_AUDIT.md  COMPLETION_REPORT.md  DOCSTRING_EXAMPLES_VERIFICATION.md  EXAMPLES_ALIGNMENT_REPORT.md  EXAMPLES_AUDIT_COMPLETE.md  EXECUTIVE_SUMMARY.md  FINAL_ASYNCIO_SOLUTION.md  GRAPHS_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LANGCHAIN_1_0_FINAL_SUMMARY.md  LANGCHAIN_1_0_UPGRADE_SUMMARY.md  LANGCHAIN_UPGRADE_SUMMARY.md  LANGGRAPH_SWARM_ANALYSIS.md  LANGGRAPH_SWARM_IMPLEMENTATION.md  MAKE_TEST_FIX_SUMMARY.md  MCP_DYNAMIC_LOADING_SOLUTION.md  MIGRATION_ASSESSMENT.md  MIGRATION_COMPLETE.md  MIGRATION_INDEX.md  MIGRATION_OPTIMIZED.md  MIGRATION_PLAN.md  MIGRATION_PROGRESS.md  MIGRATION_QUICK_START.md  MIGRATION_RISKS.md  MIGRATION_SUMMARY.md  (+36 more)
.cursor/rules/: 01-project.mdc  02-dev.mdc  03-architecture.mdc  04-testing.mdc  05-env-secrets.mdc  99-cursor-guidelines.mdc
.spec-workflow/: config.example.toml  session.json
.spec-workflow/steering/: product.md  structure.md  tech.md
configs/: config.yaml.example  default.yaml  mcp.yaml.example  sample.yaml  settings.yaml.example
docs/: API_SERVER.md  DEFAULT_FLOW.md  DEPENDENCIES.md  DESIGN.md  IMPLEMENTATION_SUMMARY.md  LANGCHAIN_1_0_MIGRATION.md  LANGCHAIN_ADVANCED_EXAMPLES.md  LANGCHAIN_API_REFERENCE.md  LANGCHAIN_MIGRATION_GUIDE.md  LANGCHAIN_PERFORMANCE_TUNING.md  LANGGRAPH_SWARM_GUIDE.md  QUICK_START.md  README.md  STREAMLIT_IMPLEMENTATION.md  TOOLS_BUNDLE_QUICK_START.md  TOOLS_BUNDLE_SYSTEM.md  WEB_INTERFACE.md
docs/async-optimization/: ASYNC_OPTIMIZATION_README.md  OPTIMIZATION_COMPLETE.md  README.md  USAGE_GUIDE.md
examples/: swarm_example.py
examples/agents/: run_agent_mcp.py  run_agents.py
examples/crews/: assessing_crew.py  executing_crew.py  planned_crew.py  (+2 more)
tests/: conftest.py  test_agent_creator.py  test_agent_monitor.py  test_agent_monitor_integration.py  test_agents_monitor_manager.py  test_agents_runnable.py  test_agents_runtime.py  test_agents_swarm_runnable.py  test_calculator_tool.py  test_chat_manager.py  test_chat_message.py  test_clock_tool.py  test_conversation_manager.py  test_default_flow.py  test_embeddings.py  test_execution_integration.py  test_file_agents_runtime_repository.py  test_file_task_runtime_repository.py  test_flow_servers.py  test_graphs.py  test_langchain_agents_adapter.py  test_langchain_integration.py  test_langchain_models_adapter.py  test_langchain_performance.py  test_langchain_tools_events_adapter.py  test_langgraph_swarm_adapter.py  test_logger_console_suppression.py  test_models_agents_integration.py  test_models_module.py  test_repository_integration.py  test_schemas.py  test_settings.py  test_task_creation_functions.py  test_task_manager.py  test_task_monitor.py  test_task_monitor_manager.py  test_task_runnable.py  test_task_tracer.py  test_tools_bundle.py  test_tools_config.py  (+5 more)
(+183 files in other folders)
